istio/auth/audit.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  namespace: mesh-example 
  name: anyname
spec:
  targetRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: api-gateway-istio 
  action: AUDIT
