istio/auth/jwt-example.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: "jwt"
  namespace: mesh-example 
spec:
  targetRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: api-gateway-istio
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.23/security/tools/jwt/samples/jwks.json"
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "user-ingress"
  namespace: mesh-example
spec:
  targetRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: api-gateway-istio 
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"]
    to:
    - operation:
        paths: ["/"]
